--- a/Assignment_10_SWE.tex
+++ b/Assignment_10_SWE.tex
@@ -37,7 +37,7 @@
         
         \item Describe the steps involved in a formal inspection process and the role of a moderator in this process.
         
-        \item What is the difference between performance testing and stress testing?
+        \item What is the difference between performance testing and stress testing? :) 
         
         
     \end{enumerate}
