adds steps of inspection

--- a/Assignment_10_SWE.tex
+++ b/Assignment_10_SWE.tex
@@ -20,8 +20,10 @@
     \begin{enumerate}
         \item Consider the diagram shown in \textit{Figure 10.8}
         \begin{enumerate}
-        \item How many logical paths are there? List them all? 
+        \item How many logical paths are there? List them all:
+        
         \item How many paths are required to cover all the statements?
+        
         \item How many paths are required to cover all the branches?
         \end{enumerate}
         
@@ -36,8 +38,16 @@
         \item Consider the simple case of testing 2 variables, \textit{X} and \textit{Y}, where \textit{X} must be a non-negative number, and \textit{Y} must be aa number between -5 and +15. Utilizing boundary value analysis, list the test cases. 
         
         \item Describe the steps involved in a formal inspection process and the role of a moderator in this process.
+        \begin{itemize}
+        \item \textit{Planning: } 
+        \item \textit{Overview: }
+        \item \textit{Preparation: } 
+        \item \textit{Examination: } 
+        \item \textit{Rework: }
+        \item \textit{Follow-Up: } 
+        \end{itemize}
         
-        \item What is the difference between performance testing and stress testing? :) 
+        \item What is the difference between performance testing and stress testing? 
         
         
     \end{enumerate}
