--- a/Assignment_10_SWE.tex
+++ b/Assignment_10_SWE.tex
@@ -11,7 +11,6 @@
     \geometry{a4paper}
     \geometry{margin = .5in}    
 
-    
     \title{Intro to Software Engineering: Assignment 10}
     \author{Harry Haisty}
     
@@ -39,7 +38,7 @@
         
         \item Describe the steps involved in a formal inspection process and the role of a moderator in this process.
         \begin{itemize}
-        \item \textit{Planning: } 
+        \item \textit{Planning: } add some text here
         \item \textit{Overview: }
         \item \textit{Preparation: } 
         \item \textit{Examination: } 
