--- a/Assignment_10_SWE.tex
+++ b/Assignment_10_SWE.tex
@@ -39,9 +39,9 @@
         \item Describe the steps involved in a formal inspection process and the role of a moderator in this process.
         \begin{itemize}
         \item \textit{Planning: } add some text here
-        \item \textit{Overview: }
-        \item \textit{Preparation: } 
-        \item \textit{Examination: } 
+        \item \textit{Overview: } %Comment
+        \item \textit{Preparation: } %Comment
+        \item \textit{Examination: } %Comment
         \item \textit{Rework: }
         \item \textit{Follow-Up: } 
         \end{itemize}
