adds swe 10 answers

--- a/Assignment_10_SWE.tex
+++ b/Assignment_10_SWE.tex
@@ -6,11 +6,12 @@
     \usepackage{color}
     \usepackage{float}
     \usepackage{hyperref}
-    \usepackage{graphicx}
     \usepackage{geometry}
     \geometry{a4paper}
-    \geometry{margin = .5in}    
-
+    \geometry{margin = .5in}
+    
+    \usepackage{graphicx}
+    
     \title{Intro to Software Engineering: Assignment 10}
     \author{Harry Haisty}
     
@@ -27,8 +28,13 @@
         \end{enumerate}
         
         \item In code inspection, what would you set as the condition (e.g, how many discovered defects) for reinspection?
+        \newline
+        \color{blue}{If the moderator deems that in the follow-up there are too many defects, they may call for a reinspection.}
+        
+        \color{black}
         
         \item List the four techniques discussed to perform verification and validation.
+        
         
         \item List two techniques you can use to perform validation -- that is, to ensure your program meets user requirements. 
         
@@ -38,12 +44,12 @@
         
         \item Describe the steps involved in a formal inspection process and the role of a moderator in this process.
         \begin{itemize}
-        \item \textit{Planning: } add some text here
-        \item \textit{Overview: } %Comment
-        \item \textit{Preparation: } %Comment
-        \item \textit{Examination: } %Comment
-        \item \textit{Rework: }
-        \item \textit{Follow-Up: } 
+        \item \textit{Planning: } a team and a moderator are selected and given the proper materials before the actual inspection meeting.
+        \item \textit{Overview: } a high-level overview of the work product is presented.
+        \item \textit{Preparation: } every member of the team is expected to study up before the actual work begins.
+        \item \textit{Examination: } an actual meeting is arranged where all the inspectors gather to review the product. The author is not allowed to read the work off to the team, so another reader is designated. People search for defects. 
+        \item \textit{Rework: } the author corrects all the defects found in the work. 
+        \item \textit{Follow-Up: } The corrections are checked by the moderator, and the corrected work is inspected again.
         \end{itemize}
         
         \item What is the difference between performance testing and stress testing? 
