--- a/Assignment_11_SWE.tex
+++ b/Assignment_11_SWE.tex
@@ -49,9 +49,10 @@
     \end{itemize}
     
     \item What is linking and what are we linking in a build process?
-    \item[]
+    \item[] Linking is when you attach all of the eternally referenced items needed that are relatively limited in number. You attach limited, externally referenced items that are necessary to the code.
     
     \item Explain the difference between the \textit{view} and the \textit{modify} functions in the storage and access model of configuration management.
+    \item[] 
     
     \item Name a tool from each of the three tiers of automating the configuration management activities.
     
