adds all of the answers to 11

--- a/Assignment_11_SWE.tex
+++ b/Assignment_11_SWE.tex
@@ -33,7 +33,10 @@
     \end{enumerate}
     
     \item What are check-in and check-out?
-    \item[]
+    \begin{itemize}
+        \item[] Check-in: would be the same as the \textit{return} function, which allows the modified artifact to be stored with the new modifications, and reenables \textit{modify} function for this artifact. 
+        \item[] Check-out: for read only would be the same as the \textit{view} function (accessed only for reading purposes).  
+    \end{itemize}
     
     \item List three concerns you may need to look into before choosing a configuration management tool:
     \begin{itemize}
@@ -52,9 +55,16 @@
     \item[] Linking is when you attach all of the eternally referenced items needed that are relatively limited in number. You attach limited, externally referenced items that are necessary to the code.
     
     \item Explain the difference between the \textit{view} and the \textit{modify} functions in the storage and access model of configuration management.
-    \item[] 
+    \item[] View: the view function of an access facility of a model allows the user to retrieve the artifact for reading purposes. 
+    
+    \item[] Modify: the modify function allows users to retrieve the artifact for the purpose of making changes to the artifact. 
     
     \item Name a tool from each of the three tiers of automating the configuration management activities.
+    \begin{enumerate}
+        \item CSSC
+        \item Odin
+        \item ClearCase
+    \end{enumerate}
     
     
     \end{enumerate}
