adds incidence matrix

--- a/Assignment_3_DS.tex
+++ b/Assignment_3_DS.tex
@@ -193,6 +193,12 @@ It is connected weakly because the paths only go one direction, which means that
         \label{fig:my_label}
     \end{figure}
     \item make an incidence matrix for this graph
+    \begin{figure}
+        \centering
+        \includegraphics[width = 8cm]{incidencematrix}
+        \caption{Incidence matrix for this graph}
+        \label{fig:my_label}
+    \end{figure}
     
     \item identify a cycle in the graph \newline
     There is a cycle between vertices A, B, and C.
