adds abstract portion

--- a/Assignment_3_DS.tex
+++ b/Assignment_3_DS.tex
@@ -214,5 +214,12 @@ It is connected weakly because the paths only go one direction, which means that
     \end{figure}
 \end{enumerate}
 
+\begin{figure}
+    \centering
+    \includegraphics[width = 11cm]{abstractsubmission}
+    \caption{My 2019 NCUR abstract submission}
+    \label{fig:my_label}
+\end{figure}
+
 
 \end{document}
