--- a/Assignment_3_DS.tex
+++ b/Assignment_3_DS.tex
@@ -38,7 +38,7 @@
 
 \maketitle
 
-\section*{3.2}
+\section*{Section 3.2}
 \begin{enumerate}
     %%%%%%%%%%%
     
@@ -129,6 +129,15 @@ for (int i = 1; i < n; i++)
     \caption{After 15 is removed from tree}
     \label{fig:my_label}
 \end{figure}
+
+\section*{Section 3.5}
+\begin{figure}
+    \centering
+    \includegraphics[width = 11cm]{binarytreewithd}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
+
 
 
 \section*{Section 3.6}
