adds reordered binary tree

--- a/Assignment_3_DS.tex
+++ b/Assignment_3_DS.tex
@@ -138,6 +138,13 @@ for (int i = 1; i < n; i++)
     \label{fig:my_label}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \includegraphics[width = 11cm]{rearrangetree}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
+
 
 
 \section*{Section 3.6}
