adds abstract details

--- a/Assignment_3_DS.tex
+++ b/Assignment_3_DS.tex
@@ -134,17 +134,16 @@ for (int i = 1; i < n; i++)
 \begin{figure}
     \centering
     \includegraphics[width = 11cm]{binarytreewithd}
-    \caption{Caption}
+    \caption{Binary tree with node D added}
     \label{fig:my_label}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width = 11cm]{rearrangetree}
-    \caption{Caption}
+    \caption{Reordered binary tree}
     \label{fig:my_label}
 \end{figure}
-
 
 
 \section*{Section 3.6}
@@ -230,6 +229,7 @@ It is connected weakly because the paths only go one direction, which means that
     \end{figure}
 \end{enumerate}
 
+\section*{Section 3.9}
 \begin{figure}
     \centering
     \includegraphics[width = 11cm]{abstractsubmission}
@@ -237,5 +237,6 @@ It is connected weakly because the paths only go one direction, which means that
     \label{fig:my_label}
 \end{figure}
 
+I couldn't make it to either of the abstract writing workshops, but I was able to get in touch with the people in the Technical Communication department here at KSU. They gave me tons of really good writing tips, and helped me edit my abstract so that I could submit it. I have submitted it to NCUR, ACM, and IEEE. 
 
 \end{document}
