updates Assignment 3 accompanying document

--- a/Assignment_3_DS.tex
+++ b/Assignment_3_DS.tex
@@ -38,6 +38,25 @@
 
 \maketitle
 
+\section*{Section 3.1}
+
+\begin{enumerate}
+    \item \begin{enumerate}
+    \item[a.] $\{1, 2, 3, 5\}$
+    \item[b.] $\{3\}$
+    \item[c.] $\{2,4\}$
+    \item[d.] $\{1\}$
+    \item[e.] $\{5, 2\}$
+    \item[f.] No, Z does not contain the value 1.
+\end{enumerate}
+
+    \item \begin{enumerate}
+        \item
+    \end{enumerate}
+\end{enumerate}
+
+
+
 \section*{Section 3.2}
 \begin{enumerate}
     %%%%%%%%%%%
@@ -238,5 +257,13 @@ It is connected weakly because the paths only go one direction, which means that
 \end{figure}
 
 I couldn't make it to either of the abstract writing workshops, but I was able to get in touch with the people in the Technical Communication department here at KSU. They gave me tons of really good writing tips, and helped me edit my abstract so that I could submit it. I have submitted it to NCUR, ACM, and IEEE. 
+
+\section*{Section 3.10}
+\begin{figure}
+    \centering
+    \includegraphics[width = 12cm]{310result}
+    \caption{code output for section 3.10}
+    \label{fig:my_label}
+\end{figure}
 
 \end{document}
